--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,11 @@
       content="Web site created using create-react-app"
     /-->
     <!-- possible Content Security Policy directive load image fix-->
-    <meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
-
+    <!--meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"-->
+    <meta http-equiv="Content-Security-Policy" content="default-src *;
+    script-src 'self' 'unsafe-eval' 'unsafe-inline';
+    img-src *.example.com 'self';
+    style-src 'self' 'unsafe-inline';">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
