--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,12 @@
     /-->
     <!-- possible Content Security Policy directive load image fix-->
     <!--meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"-->
-    <meta http-equiv="Content-Security-Policy" content="default-src *;
+    <!--meta http-equiv="Content-Security-Policy" content="default-src *;
     script-src 'self' 'unsafe-eval' 'unsafe-inline';
     img-src *.example.com 'self';
-    style-src 'self' 'unsafe-inline';">
+    style-src 'self' 'unsafe-inline';"-->
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
