--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!--meta
+    <meta
       name="description"
       content="Web site created using create-react-app"
-    /-->
+    />
     <!-- possible Content Security Policy directive load image fix-->
     <!--meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"-->
     <!--meta http-equiv="Content-Security-Policy" content="default-src *;
@@ -16,7 +16,7 @@
     img-src *.example.com 'self';
     style-src 'self' 'unsafe-inline';"-->
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
+    
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
