--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,20 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- possible Content Security Policy directive load image fix-->
-    <!--meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"-->
-    <!--meta http-equiv="Content-Security-Policy" content="default-src *;
-    script-src 'self' 'unsafe-eval' 'unsafe-inline';
-    img-src *.example.com 'self';
-    style-src 'self' 'unsafe-inline';"-->
-
-    
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TufCat Books</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
